--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -214,13 +214,17 @@ ul.todo {
     position: relative;
     top: 25%;
   }
+  h1 {
+    text-align: center;
+  }
   .authenticate-choice {
+    box-shadow: 9px 10px 25px -4px #000;
     margin: 0 auto;
     width: 85%;
     border: 1px solid;
     border-radius: 3px;
     padding: 20px 30px;
-    background: rgba( 56, 180, 74, 0.6);
+    background: rgba(228, 251, 204, 0.64);
     @media(min-width: 760px) {
       width: 50%;
       padding: 20px 80px;
@@ -230,6 +234,9 @@ ul.todo {
       margin: 0 auto;
       display: block;
       margin-bottom: 20px;
+    }
+    input:focus {
+      border: 1px solid #ffa500;
     }
     .btn-primary {
       margin: 0 auto;
