--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -1,7 +1,3 @@
-body {
-  padding: 80px 0 0 0;
-}
-
 .noFill {
   fill: none;
 }
@@ -9,15 +5,12 @@ body {
 header {
   width: 100%;
   height: 80px;
-  position: fixed;
   padding: 15px;
-  top: 0;
-  left: 0;
   z-index: 5;
   background: #e8543a;
   box-shadow: 0px 2px 4px rgba(44, 62, 80, 0.15);
-  border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;
+  border-radius: 10px;
+  position: relative;
   input {
     width: 100%;
     height: 50px;
@@ -70,8 +63,6 @@ header {
 }
 
 .container {
-  width: 100%;
-  float: left;
   padding: 15px;
 }
 
@@ -202,20 +193,15 @@ ul.todo {
 
 .auth-view {
   height: 100vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: #2D2530;
-  width: 100%;
-  z-index: 900;
-  background-image: url(http://cdn.onlinewebfonts.com/svg/img_78218.svg);
-  background-size: 32px;
+  /* background-image: url(http://cdn.onlinewebfonts.com/svg/img_78218.svg);
+  background-size: 32px; */
   .auth-section {
     position: relative;
     top: 25%;
   }
   h1 {
     text-align: center;
+    margin-top: 0;
   }
   .authenticate-choice {
     box-shadow: 9px 10px 25px -4px #000;
